force-app/main/default/objects/Inactive_Users_Setting_mm__mdt/Inactive_Users_Setting_mm__mdt.object-meta.xml
<CustomObject>
    <description>General settings for freezing and inactivation automation. Only &quot;Default&quot; record must be present. Further records will be ignored.</description>
    <label>User Inactivation Setting</label>
    <pluralLabel>User Inactivation Settings</pluralLabel>
</CustomObject>