force-app/main/default/objects/Inactive_Users_Setting_mm__mdt/fields/Batch_Size_mm__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size_mm__c</fullName>
    <defaultValue>200</defaultValue>
    <label>Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>