force-app/main/default/objects/Inactive_Users_Setting_mm__mdt/fields/Email_Recipient_mm__c.field-meta.xml
<CustomField>
    <fullName>Email_Recipient_mm__c</fullName>
    <inlineHelpText>A notification email will be sent to the email addresses listed here. Email addresses must be comma-separated.</inlineHelpText>
    <label>Email Recipient</label>
    <type>TextArea</type>
</CustomField>