force-app/main/default/objects/Inactive_Users_Setting_mm__mdt/fields/Excluded_Profiles_mm__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Profiles_mm__c</fullName>
    <inlineHelpText>By default, all profiles with &quot;Salesforce&quot; as User License will get automatically frozen and/or inactivated. Populate the field with comma-separated profile names to be excluded from this automation.</inlineHelpText>
    <label>Excluded Profiles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>