force-app/main/default/objects/Inactive_Users_Setting_mm__mdt/fields/Inactivation_Days_After_Last_Login_mm__c.field-meta.xml
<CustomField>
    <fullName>Inactivation_Days_After_Last_Login_mm__c</fullName>
    <label>Inactivation - Days After Last Login</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>